Enhance API responses and typings for OneClickImpact SDK - Updated package.json to include new dependencies and updated versions. - Refactored client.ts to improve API response handling and typings:   - Changed return types of methods to specific response interfaces.   - Added transformation logic for API responses to match SDK interfaces.   - Introduced a helper function to transform customer data. - Expanded types.ts with new response interfaces for PlantTree, CleanOcean, CaptureCarbon, and DonateMoney methods. - Improved error handling in makeRequest method. - Added detailed comments for better code understanding and maintenance.

--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   "author": "1ClickImpact",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.11.18",
-    "typescript": "^4.9.4",
-    "jest": "^29.3.1",
-    "@types/jest": "^29.2.5",
-    "ts-jest": "^29.0.3"
+    "@types/node-fetch": "^2.6.4",
+    "dotenv": "^16.5.0",
+    "jest": "^29.5.0",
+    "node-fetch": "^2.6.7",
+    "ts-jest": "^29.1.0",
+    "typescript": "^4.9.4"
   },
   "files": [
     "dist"
