--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Official JavaScript SDK for 1ClickImpact",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build",
@@ -13,8 +18,18 @@
     "1clickimpact",
     "sustainability",
     "climate",
-    "sdk"
+    "sdk",
+    "impact",
+    "trees",
+    "carbon",
+    "ocean",
+    "environment",
+    "esg"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/1ClickImpact/makeimpact-js.git"
+  },
   "author": "1ClickImpact",
   "license": "MIT",
   "devDependencies": {
@@ -27,7 +42,7 @@
     "ts-jest": "^29.1.0",
     "typescript": "^4.9.4"
   },
-  "files": [
-    "dist"
-  ]
+  "publishConfig": {
+    "access": "public"
+  }
 }
